force-app/main/default/objects/DreamWorks__c/DreamWorks__c.object-meta.xml
<CustomObject>
    <label>Funimation</label>
    <nameField>
        <label>DreamWorks Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funimations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>