force-app/main/default/objects/DreamWorks__c/fields/Article_Author__c.field-meta.xml
<CustomField>
    <fullName>Article_Author__c</fullName>
    <label>Article Author</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>