force-app/main/default/objects/DreamWorks__c/fields/Article_Genre__c.field-meta.xml
<CustomField>
    <fullName>Article_Genre__c</fullName>
    <label>Article Genre</label>
    <type>TextArea</type>
</CustomField>