force-app/main/default/objects/DreamWorks__c/fields/Article_Name__c.field-meta.xml
<CustomField>
    <fullName>Article_Name__c</fullName>
    <label>Article Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>