force-app/main/default/objects/DreamWorks__c/fields/Kinikiman__c.field-meta.xml
<CustomField>
    <fullName>Kinikiman__c</fullName>
    <label>Kinikiman</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>