force-app/main/default/objects/DreamWorks__c/fields/Shingeki_No_Kyojin__c.field-meta.xml
<CustomField>
    <fullName>Shingeki_No_Kyojin__c</fullName>
    <label>Shingeki No Kyojin</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>